Tuesday morning bug squashing

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ img {
   float:right;
 }
 
-#Start {
+#start {
   width: 100px;
   height: 30px;
   background-color: white;
